syntax = "proto3";

option csharp_namespace = "GrpcTestingLimitationsClient";


service ClientInstances
{ 
	rpc CreateClientInstance(CreateClientInstanceRequest) returns (CreateClientInstanceResponse);
}

message CreateClientInstanceRequest
{ 
	string username = 1;
	string SessionUnique = 2;
}

message CreateClientInstanceResponse
{ 
	string SessionUnique = 1; 
	string TimeOfClientCreation = 2;
}